--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,8 +67,8 @@
   --color-brand: var(--color-brand);
   --color-input: var(--color-input);
 
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-inter: var(--font-inter);
+  --font-poppins: var(--font-poppins);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
